WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215592
Assert failure after
r265715
https://bugs.webkit.org/show_bug.cgi?id=215592
Summary
Assert failure after r265715
Per Arne Vollan
Reported
2020-08-17 16:12:23 PDT
The change set
r265715
introduced an assert failure in AuthenticationManager::initializeConnection.
Attachments
Patch
(7.41 KB, patch)
2020-08-17 16:16 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-08-17 16:16:43 PDT
Created
attachment 406751
[details]
Patch
Per Arne Vollan
Comment 2
2020-08-17 17:22:39 PDT
Comment on
attachment 406751
[details]
Patch Thanks for reviewing!
EWS
Comment 3
2020-08-17 17:49:05 PDT
Committed
r265792
: <
https://trac.webkit.org/changeset/265792
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406751
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-08-17 17:50:15 PDT
<
rdar://problem/67283921
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug