Source/WebKit/Shared/Authentication/cocoa/AuthenticationManagerCocoa.mm
@@ -39,7 +39,7 @@ namespace WebKit {
 
 void AuthenticationManager::initializeConnection(IPC::Connection* connection)
 {
-    ASSERT(isMainThread());
+    RELEASE_ASSERT(isMainThread());
 
     if (!connection || !connection->xpcConnection()) {
         ASSERT_NOT_REACHED();
@@ -50,54 +50,56 @@ void AuthenticationManager::initializeConnection(IPC::Connection* connection)
     // The following xpc event handler overwrites the boostrap event handler and is only used
     // to capture client certificate credential.
     xpc_connection_set_event_handler(connection->xpcConnection(), ^(xpc_object_t event) {
-        ASSERT(isMainThread());
+        callOnMainThread([event = OSObjectPtr(event), weakThis = weakThis] {
+            RELEASE_ASSERT(isMainThread());
 
-        xpc_type_t type = xpc_get_type(event);
-        if (type == XPC_TYPE_ERROR || !weakThis)
-            return;
+            xpc_type_t type = xpc_get_type(event.get());
+            if (type == XPC_TYPE_ERROR || !weakThis)
+                return;
 
-        if (type != XPC_TYPE_DICTIONARY || strcmp(xpc_dictionary_get_string(event, ClientCertificateAuthentication::XPCMessageNameKey), ClientCertificateAuthentication::XPCMessageNameValue)) {
-            ASSERT_NOT_REACHED();
-            return;
-        }
-
-        auto challengeID = xpc_dictionary_get_uint64(event, ClientCertificateAuthentication::XPCChallengeIDKey);
-        if (!challengeID)
-            return;
-
-        auto xpcEndPoint = xpc_dictionary_get_value(event, ClientCertificateAuthentication::XPCSecKeyProxyEndpointKey);
-        if (!xpcEndPoint || xpc_get_type(xpcEndPoint) != XPC_TYPE_ENDPOINT)
-            return;
-        auto endPoint = adoptNS([[NSXPCListenerEndpoint alloc] init]);
-        [endPoint _setEndpoint:xpcEndPoint];
-        NSError *error = nil;
-        auto identity = adoptCF([SecKeyProxy createIdentityFromEndpoint:endPoint.get() error:&error]);
-        if (!identity || error) {
-            LOG_ERROR("Couldn't create identity from end point: %@", error);
-            return;
-        }
-
-        auto certificateDataArray = xpc_dictionary_get_array(event, ClientCertificateAuthentication::XPCCertificatesKey);
-        if (!certificateDataArray)
-            return;
-        NSMutableArray *certificates = nil;
-        if (auto total = xpc_array_get_count(certificateDataArray)) {
-            certificates = [NSMutableArray arrayWithCapacity:total];
-            for (size_t i = 0; i < total; i++) {
-                auto certificateData = xpc_array_get_value(certificateDataArray, i);
-                auto cfData = adoptCF(CFDataCreate(nullptr, reinterpret_cast<const UInt8*>(xpc_data_get_bytes_ptr(certificateData)), xpc_data_get_length(certificateData)));
-                auto certificate = adoptCF(SecCertificateCreateWithData(nullptr, cfData.get()));
-                if (!certificate)
-                    return;
-                [certificates addObject:(__bridge id)certificate.get()];
+            if (type != XPC_TYPE_DICTIONARY || strcmp(xpc_dictionary_get_string(event.get(), ClientCertificateAuthentication::XPCMessageNameKey), ClientCertificateAuthentication::XPCMessageNameValue)) {
+                ASSERT_NOT_REACHED();
+                return;
             }
-        }
 
-        auto persistence = xpc_dictionary_get_uint64(event, ClientCertificateAuthentication::XPCPersistenceKey);
-        if (persistence > static_cast<uint64_t>(NSURLCredentialPersistenceSynchronizable))
-            return;
+            auto challengeID = xpc_dictionary_get_uint64(event.get(), ClientCertificateAuthentication::XPCChallengeIDKey);
+            if (!challengeID)
+                return;
 
-        weakThis->completeAuthenticationChallenge(challengeID, AuthenticationChallengeDisposition::UseCredential, WebCore::Credential(adoptNS([[NSURLCredential alloc] initWithIdentity:identity.get() certificates:certificates persistence:(NSURLCredentialPersistence)persistence]).get()));
+            auto xpcEndPoint = xpc_dictionary_get_value(event.get(), ClientCertificateAuthentication::XPCSecKeyProxyEndpointKey);
+            if (!xpcEndPoint || xpc_get_type(xpcEndPoint) != XPC_TYPE_ENDPOINT)
+                return;
+            auto endPoint = adoptNS([[NSXPCListenerEndpoint alloc] init]);
+            [endPoint _setEndpoint:xpcEndPoint];
+            NSError *error = nil;
+            auto identity = adoptCF([SecKeyProxy createIdentityFromEndpoint:endPoint.get() error:&error]);
+            if (!identity || error) {
+                LOG_ERROR("Couldn't create identity from end point: %@", error);
+                return;
+            }
+
+            auto certificateDataArray = xpc_dictionary_get_array(event.get(), ClientCertificateAuthentication::XPCCertificatesKey);
+            if (!certificateDataArray)
+                return;
+            NSMutableArray *certificates = nil;
+            if (auto total = xpc_array_get_count(certificateDataArray)) {
+                certificates = [NSMutableArray arrayWithCapacity:total];
+                for (size_t i = 0; i < total; i++) {
+                    auto certificateData = xpc_array_get_value(certificateDataArray, i);
+                    auto cfData = adoptCF(CFDataCreate(nullptr, reinterpret_cast<const UInt8*>(xpc_data_get_bytes_ptr(certificateData)), xpc_data_get_length(certificateData)));
+                    auto certificate = adoptCF(SecCertificateCreateWithData(nullptr, cfData.get()));
+                    if (!certificate)
+                        return;
+                    [certificates addObject:(__bridge id)certificate.get()];
+                }
+            }
+
+            auto persistence = xpc_dictionary_get_uint64(event.get(), ClientCertificateAuthentication::XPCPersistenceKey);
+            if (persistence > static_cast<uint64_t>(NSURLCredentialPersistenceSynchronizable))
+                return;
+
+            weakThis->completeAuthenticationChallenge(challengeID, AuthenticationChallengeDisposition::UseCredential, WebCore::Credential(adoptNS([[NSURLCredential alloc] initWithIdentity:identity.get() certificates:certificates persistence:(NSURLCredentialPersistence)persistence]).get()));
+        });
     });
 }
 
